--- a/commerce/auctions/templates/auctions/details.html
+++ b/commerce/auctions/templates/auctions/details.html
@@ -1,13 +1,19 @@
 {% extends "auctions/layout.html" %}
+{% load static %}
 {% block body %}
     <div>
     <a href="{% url 'image' details.id %}">
         <img src="{{ details.product_image.url }}" alt="{{ details.product_name }}">
     </a>
-    <h5>ID: {{ details.id }}</h5>
-    <h5>NAME: {{ details.product_name }}</h5>
-    <h6>PRICE: {{ details.product_price }}$$</h6>
-    </div>
+    
+    <ul>
+        <li><h5>{{ details.product_name }}</h5></li>
+        <li><h6 style="display : inline">PRICE:</h6><span style="display : inline">{{ details.product_price }}$$</span></li>
+        <li>{{details.product_description}}</li>
+    
+    
+    
+    </ul>
     <div>
         # error is in this section
         <form action="{% url 'add_to_watch_list' details.id %}" method="POST">
