--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -14,7 +14,6 @@ body {
     margin: 1rem 0;
   }
   #header{
-    background-color:#0F1111;
     color:#ffffff;
   }
 
@@ -25,9 +24,13 @@ body {
   .nav{
     display:flex;
     align-items: center;
+    border-bottom: 5px solid white;
   }
   .nav-item .nav-link{
     color:#ffffff;
+  }
+  .nav-link:hover{
+    color:rgb(192, 179, 179);
   }
   #profile-button{
     background-color: rgb(5, 179, 5);
