--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -1,21 +1,41 @@
+*{
+  margin:0;
+  font-family:sans-serif;
+  border:none;
+}
 body {
     font-family: sans-serif;
     margin: 0;
     padding: 0;
-    background-color:#232F3E;
+    background-color:hwb(160 77% 5%);
   }
   footer{
     /* background-color: rgba(128, 128, 128, 0.477); */
     color:#ffffff;
+    margin:0;
     
   }
   
   h2, h3, h5, h6 {
     margin: 1rem 0;
   }
-  #header{
-    color:#ffffff;
+  .navbar{
+    background-color: rgba(128, 128, 128, 0.507);
+    color:rgba(7, 0, 0, 0.641);
   }
+  .navbar2{
+    background-color:rgba(128, 128, 128, 0.277);
+  }
+  .navbar-3>h2{
+    margin:0;
+    background-color:hwb(160 77% 5%);
+    margin-bottom:0;
+  }
+  /* #active{
+    color:#ffffff;
+    background-color:#232F3E ;
+    margin:0;
+  } */
 
   header{
     font-family: sans-serif;
@@ -24,10 +44,15 @@ body {
   .nav{
     display:flex;
     align-items: center;
-    border-bottom: 5px solid white;
+    /* border-bottom: 5px solid white; */
   }
   .nav-item .nav-link{
     color:#ffffff;
+    background-color: #cccccc00;
+  }
+  .nav-item:hover{
+    background-color:#ffffff;
+
   }
   .nav-link:hover{
     color:rgb(192, 179, 179);
@@ -37,16 +62,19 @@ body {
     border-radius: 8px;
     border:none;
     color:#fff;
-    width:120px;
+    width:150px;
     height:40px;
+    margin-top: 4px;;
     margin-bottom:none;
+    display:flex;
+    align-items: center;
+    text-align: center;
+
   }
   #profile-button:hover{
     background-color:rgba(4, 112, 4, 0.696) ;
   }
-  #profile-button > h2{
-      margin-bottom: 5px;  
-  }
+  
 
   hr h2{
      background-color: bisque;
@@ -64,6 +92,7 @@ body {
   
   /* Object container styles */
   .object-container {
+    margin-top: 0;
     background-color: rgb(196, 242, 227);
     display: flex;
     flex-wrap: wrap;
@@ -71,15 +100,21 @@ body {
     margin: 1rem 0;
   }
   
-  .object-body {
+  .object-container>.object-body {
+  
     background-color: #fff;
-    border-radius: 20px;
+    border-radius: 4px;
     padding: 1rem;
     margin: 0.5rem;
     flex: 1 0 30%; /* Adjust width as needed for different screen sizes */
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  .object-body:hover{
+    border: 1px solid #ccc; /* Add a border */
+    box-shadow: 2px 2px 10px rgba(150, 143, 143, 0.5); /* Add a shadow */
+    
   }
   
   .object-image {
