--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,61 +7,64 @@
         <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
     </head> 
     <body>
-        
         <header>
-            <h1>Auctions</h1>
+           <div class="navbar">
+              <h1>Auctions</h1>
+           </div>
             <!-- {% if user.is_authenticated %}
                 Signed in as <strong>{{ user.username }}</strong>.
             {% else %}
                 Not signed in.
             {% endif %} -->
-        </header>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'categories' %}">Categories</a>
-            </li>
-            
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'watch_list' %}">Watchlist</a>
-            </li>
+            <div class="navbar2">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'categories' %}">Categories</a>
+                    </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'watch_list' %}">Watchlist</a>
+                    </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'create_listing' %}">Create Listing</a>
-            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'create_listing' %}">Create Listing</a>
+                    </li>
 
-            {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                </li>
-                <li class="nav-item 2"><button id="profile-button"><h5>{{user.username}}</h5></button></li>
-            {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Log In</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'register' %}">Register</a>
-                </li>
-                <div id="header-gap">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                        </li>
+                        <li class="nav-item 2"><button id="profile-button"><h5>{{user.username}}</h5></button></li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register' %}">Register</a>
+                        </li>
+                        <div id="header-gap">
 
-                </div> 
+                        </div> 
 
-                <li class="nav-item 2"><button id="profile-button"><h5>Not SignIn</h5></button></li>
-            {% endif %}
-           
-            <!-- <li class="nav-item">
-            {% if user.is_authenticated %}
-                Signed in as <strong>{{ user.username }}</strong>.
-            {% else %}
-                Not signed in.
-            {% endif %}
-            </li> -->
-            </ul>
-      
-            
-        </div>
+                        <li class="nav-item 2"><button id="profile-button"><h5>Not Signed In</h5></button></li>
+                    {% endif %}
+                
+                    <!-- <li class="nav-item">
+                    {% if user.is_authenticated %}
+                        Signed in as <strong>{{ user.username }}</strong>.
+                    {% else %}
+                        Not signed in.
+                    {% endif %}
+                    </li> -->
+                </ul>
+               
+            </div>       
+                
+    </header>    
+        
         {% block body %}
         {% endblock %}
 
